--- a/bmt_admin/lib/bmt_admin_web/components/layouts/app.html.heex
+++ b/bmt_admin/lib/bmt_admin_web/components/layouts/app.html.heex
@@ -56,7 +56,7 @@
             </a>
          </li>
          <li>
-            <a href="#" phx-click="accounts"  class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
+            <a href="#" phx-click="accounts" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
                <svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg>
                <span class="flex-1 ml-3 whitespace-nowrap">Accounts</span>
             </a>
@@ -79,7 +79,7 @@
 
 <div class="p-4 sm:ml-64">
    <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14">
-      <div class="flex h-screen mb-4 rounded">
+      <div class="h-screen mb-4 rounded">
          <%= @inner_content %>
       </div>
    </div>
